language/move-lang/tests/move_check/typing/declare_wrong_type.exp
error: 

   ┌── tests/move_check/typing/declare_wrong_type.move:6:13 ───
   │
 6 │         let S { g } : R;
   │             ^^^^^^^ Invalid deconstruction binding
   ·
 6 │         let S { g } : R;
   │             ------- The type: '0x8675309::M::S'
   ·
 6 │         let S { g } : R;
   │                       - Is not compatible with: '0x8675309::M::R'
   │

error: 

   ┌── tests/move_check/typing/declare_wrong_type.move:7:14 ───
   │
 7 │         let (S { g }, R { f }): (R, R);
   │              ^^^^^^^ Invalid deconstruction binding
   ·
 7 │         let (S { g }, R { f }): (R, R);
   │              ------- The type: '0x8675309::M::S'
   ·
 7 │         let (S { g }, R { f }): (R, R);
   │                                  - Is not compatible with: '0x8675309::M::R'
   │

